# Every-Other-Token

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  docker-compose.yml  every_other_token.py  index.html  lib.rs  run.ps1
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nightly_research.yml  release.yml
docs/: ARCHITECTURE.md  api.md  features.md  research-schema.json  websocket.md
scripts/: coverage_check.sh  pre-commit.sh  publish_crate.sh  ratio_check.sh  upload_dataset.py
src/: adaptive.rs  adaptive_sampling.rs  attention.rs  attribution.rs  batch.rs  bayesian.rs  benchmark.rs  chain_of_thought.rs  chain_validator.rs  checkpoint.rs  chunking.rs  circuits.rs  citation_manager.rs  cli.rs  code_executor.rs  collab.rs  comparison.rs  config.rs  context.rs  context_compressor.rs  context_optimizer.rs  context_retriever.rs  conversation_memory.rs  cost_aware_router.rs  cross_model.rs  debate_engine.rs  dialogue_manager.rs  divergence.rs  document_parser.rs  entropy.rs  error.rs  evaluation_framework.rs  experiment_log.rs  fact_checker.rs  few_shot_selector.rs  fingerprint.rs  format_detector.rs  hallucination.rs  hallucination_detector.rs  heatmap.rs  (+53 more)
src/compression/: mod.rs
src/experiments/: mod.rs
src/helix_bridge/: client.rs  converter.rs  mod.rs
src/self_modify/: deployment.rs  discover.rs  docs.rs  gate.rs  memory.rs  mod.rs  redis_memory.rs  task_gen.rs
src/self_tune/: anomaly.rs  controller.rs  cost.rs  experiment.rs  mod.rs  orchestrator.rs  redis_snapshot.rs  snapshot.rs  telemetry_bus.rs
src/ui/: app.js  style.css  template.html
static/: index.html
tasks/: TASKS.toml
tests/: collab_tests.rs  integration_stream.rs  providers_tests.rs  self_tune_integration.rs  store_heatmap_replay_tests.rs  transforms_tests.rs  web_integration.rs
