[package]
name = "every-other-token"
version = "4.0.0"
edition = "2021"
authors = ["AI Research Tools"]
description = "A real-time LLM stream interceptor for token-level interaction research"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mattbusel/Every-Other-Token"
keywords = ["llm", "ai", "research", "token", "anthropic", "openai"]
categories = ["command-line-utilities", "science"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rand = "0.8"
tokio-tungstenite = "0.21"
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
# tracing: structured logging for diagnostics — used by helix_bridge polling loop
tracing = "0.1"

[features]
default = []
# Self-improving system — all phases behind feature flags
self-tune    = []
self-modify  = ["self-tune"]
intelligence = ["self-tune"]
evolution    = ["self-tune", "intelligence"]
self-improving = ["self-tune", "self-modify", "intelligence", "evolution"]
# HelixRouter HTTP bridge — polls /api/stats and pushes /api/config patches
helix-bridge = ["self-tune"]
# Redis-backed persistence for agent memory and snapshot registry
redis-backing = ["self-modify", "dep:redis"]

[dependencies.redis]
# redis: synchronous client for write-through persistence of agent memory and snapshots
version = "0.25"
optional = true

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "every_other_token"
path = "src/lib.rs"

[[bin]]
name = "every-other-token"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
