[package]
name = "every-other-token"
version = "4.0.1"
edition = "2021"
rust-version = "1.81"
authors = ["AI Research Tools"]
description = "A real-time LLM stream interceptor for token-level interaction research"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mattbusel/Every-Other-Token"
homepage = "https://github.com/Mattbusel/Every-Other-Token"
documentation = "https://docs.rs/every-other-token"
keywords = ["llm", "ai", "research", "token", "interpretability"]
categories = ["command-line-utilities", "science", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rand = "0.8"
tokio-tungstenite = "0.21"
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
# tracing: structured logging for diagnostics — used by helix_bridge polling loop
tracing = "0.1"
# thiserror: derive macro for the crate-level EotError enum in src/error.rs
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.18"
clap_complete = "4.4"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
sqlite-log = []
# WASM support
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# Self-improving system — all phases behind feature flags
self-tune    = []
self-modify  = ["self-tune"]
intelligence = ["self-tune"]
evolution    = ["self-tune", "intelligence"]
self-improving = ["self-tune", "self-modify", "intelligence", "evolution"]
# HelixRouter HTTP bridge — polls /api/stats and pushes /api/config patches
helix-bridge = ["self-tune"]
# Redis-backed persistence for agent memory and snapshot registry
redis-backing = ["self-modify", "dep:redis"]

[dependencies.redis]
# redis: synchronous client for write-through persistence of agent memory and snapshots
version = "0.26"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
# rstest: parameterized / table-driven test helpers
rstest = "0.18"

[lib]
name = "every_other_token"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "every-other-token"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
